# trexcloud-oee-rca

./: .gitignore  HANDOFF.md  README.md  SUNUM_PROFESYONEL_TASARIM_BRIFI.md  SUNUM_REHBERI.md  pyproject.toml  trexCloud_Final_Sunum.pptx  trexCloud_Sunum.pptx
analysis/artifacts/: README.md  crossmachine_metrics.json  downtime_pareto.csv  eval_metrics.json  fanuc_model_meta.json  fanuc_risk_episodes.csv  fanuc_tuning_metrics.json  machine_master.csv  pm_value.json  predict_metrics.json  regime_metrics.json  scenarios.json  signal_map.csv
analysis/reports/: 01_DATA_REVIEW.md  02_EVALUATION.md  03_PREDICTION_BENCHMARK.md  04_CROSSMACHINE.md  05_REGIME_MODELS.md  06_FANUC_TUNING.md  07_SCENARIOS.md  08_PM_VALUE.md
analysis/scripts/: eda.py  eda2.py
app/: Home.py
app/.streamlit/: config.toml
app/lib/: charts.py  data.py  state.py
app/pages/: 1_RCA_Event_Explorer.py  2_What_If.py  3_Cross_Machine_Recurrence.py  4_Model_Benchmark.py  5_Predict_to_Action.py
scripts/: build_ad.py  build_crossmachine.py  build_fanuc_risk.py  build_final_deck.py  build_final_deck_pptx.py  build_foundation.py  build_konusma_metni.py  build_pm_value.py  build_predict.py  build_presentation_brief.py  build_presentation_plan.py  build_regime_models.py  build_scenarios.py  build_slides.py  build_slides_pdf.py  demo.py  diagnose_crossmachine.py  diagnose_predict.py  evaluate.py  export_web.py  tune_fanuc.py
src/trex/: __init__.py  loaders.py  oee.py  signals.py
tests/: test_whatif_pmvalue.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  lib.js  (+2 more)
(+32 files in other folders)
