[project]
name = "trex"
version = "0.1.0"
description = "trexCloud hackathon — OEE What-If & RCA foundation (loaders, semantic signal map, OEE recompute)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "plotly>=6.8.0",
    "pyarrow>=16",
    "python-pptx>=1.0.2",
    "reportlab>=4.5.1",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trex"]
